@@ -35,11 +35,11 @@ header files installed.
      http://ftp.gnome.org/pub/gnome/sources/intltool/  
 
   3. You need to have GEGL version 0.0.18 or newer and babl version
-     0.0.22 or newer. You can get it from http://gegl.org/ or check
-     it out from the subversion repository:
+     0.0.22 or newer. You can get them from http://gegl.org/ or clone
+     them from the GNOME git repository:
 
-       http://svn.gnome.org/svn/babl/trunk
-       http://svn.gnome.org/svn/gegl/trunk
+       git://git.gnome.org/babl
+       git://git.gnome.org/gegl
 
   4. You need to have installed GTK+ version 2.14.4 or newer.  GIMP
      also need a recent versions of GLib (>= 2.18.0) and Pango (>= 1.20.1).
